--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class = 'titleDiv'>
-    <a href = "https://blackjackonline.azurewebsites.net">Blackjack</a>
+    <a href = "https://red-mud-05615d70f.3.azurestaticapps.net">Blackjack</a>
   </div>
     
 
