--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
     <div id = 'deck'>
       <div id = 'dealerScore' class="hide"></div>
-      <div class = 'cardPlaceHolder'>
-        <!--<div class = 'backCard show'></div>-->
-      </div>
+      <div class = 'cardPlaceHolder'></div>
       <div id = 'playerScore' class="hide"></div>
     </div>
 
@@ -79,32 +77,7 @@
     </div>
 
   </div>
-    
 
-
-
-  <!--
-    <div id = 'board2'>
-
-    <div id = "btnBox">
-      <button id = "makeBtn">Create</button>
-      <button id = "flipBtn">Flip</button>
-    </div>
-
-
-
-    <div id = "box">
-
-    </div>
-
-    
-
-  </div>
-
-
-
-  -->
-  
 
   <script src = 'app.js'></script>
 
