--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang = 'en-us'>
 
 <head>
-    <title>Blackjack Online</title>
-    <meta charset = 'UTF-8'>
-    <meta name = 'viewport' content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">    
-    <link rel = 'stylesheet' href = 'style.css'>
+  <title>Blackjack Online</title>
+  <meta charset = 'UTF-8'>
+  <meta name = 'viewport' content='width=device-width, initial-scale=1'>
+  <link rel = 'stylesheet' href = 'style.css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Tektur&display=swap" rel="stylesheet">  
 </head>
 
 <body>
