--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel = 'stylesheet' href = 'style.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tektur" rel="stylesheet">
 </head>
 
 <body>
